Added chart button, changed paths so that they are generic